<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_football">

    <fragment
        android:id="@+id/navigation_football"
        android:name="com.example.sofascore_zavrsni_projekt.ui.football.FootballFragment"
        android:label="@string/title_football"
        tools:layout="@layout/football_fragment" />

    <fragment
        android:id="@+id/navigation_basketball"
        android:name="com.example.sofascore_zavrsni_projekt.ui.basketball.BasketballFragment"
        android:label="@string/title_basketball"
        tools:layout="@layout/basketball_fragment" />

    <fragment
        android:id="@+id/navigation_american_football"
        android:name="com.example.sofascore_zavrsni_projekt.ui.american_football.AmericanFootballFragment"
        android:label="@string/title_american_football"
        tools:layout="@layout/american_football_fragment" />

    <fragment
        android:id="@+id/navigation_leagues_page"
        android:name="com.example.sofascore_zavrsni_projekt.ui.leagues_page.LeaguesFragment"
        android:label="@string/title_leagues_page"
        tools:layout="@layout/leagues_fragment"/>

</navigation>