<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inner_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/color_primary_default">

        <ImageView
            android:id="@+id/back_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@mipmap/icon_back"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toTopOf="@id/inner_layout"
            app:layout_constraintStart_toStartOf="@id/inner_layout"
            app:layout_constraintBottom_toBottomOf="@id/inner_layout"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/settings_headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/surface_surface_1"
            android:text="@string/title_settings_page"
            app:layout_constraintTop_toTopOf="@id/inner_layout"
            app:layout_constraintBottom_toBottomOf="@id/inner_layout"
            app:layout_constraintStart_toStartOf="@id/inner_layout"
            android:layout_marginStart="72dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/inner_layout_1"
        app:layout_constraintTop_toBottomOf="@id/inner_layout"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_frame">

        <TextView
            android:id="@+id/text_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="@color/color_primary_default"
            android:textStyle="bold"
            android:text="@string/language_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"/>

        <TextView
            android:id="@+id/language_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/on_surface_on_surface_lv_1"
            android:text="@string/text_english"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintTop_toBottomOf="@id/text_language"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="56dp"/>

        <ImageView
            android:id="@+id/down_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:src="@mipmap/icon_down"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line_1"
        android:background="@color/on_surface_on_surface_lv_4"
        app:layout_constraintTop_toBottomOf="@id/inner_layout_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp">
    </View>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inner_layout_2"
        app:layout_constraintTop_toBottomOf="@id/line_1">

        <TextView
            android:id="@+id/theme_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/color_primary_default"
            android:text="@string/theme_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            />

        <TextView
            android:id="@+id/light_theme_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/on_surface_on_surface_lv_1"
            android:text="@string/light_theme_text"
            android:layout_marginTop="14dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="14dp"
            app:layout_constraintTop_toBottomOf="@+id/theme_choice"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/dark_theme_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/on_surface_on_surface_lv_1"
            android:text="@string/dark_theme_text"
            android:layout_marginTop="14dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="14dp"
            app:layout_constraintTop_toBottomOf="@+id/light_theme_text"
            app:layout_constraintStart_toStartOf="parent"
            />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp">

            <RadioButton
                android:id="@+id/radio_button_light"
                android:layout_width="30dp"
                android:layout_height="24dp"
                android:checked="true"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="45dp"
                android:layout_marginBottom="10dp"
                android:buttonTint="@color/color_primary_default"
                />

            <RadioButton
                android:id="@+id/radio_button_dark"
                android:layout_width="30dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="12dp"
                android:buttonTint="@color/color_primary_default"
                />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line_2"
        android:background="@color/on_surface_on_surface_lv_4"
        app:layout_constraintTop_toBottomOf="@id/inner_layout_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp">
    </View>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inner_layout_3"
        app:layout_constraintTop_toBottomOf="@id/line_2">

        <TextView
            android:id="@+id/date_format_choice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/color_primary_default"
            android:text="@string/date_format_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            />

        <TextView
            android:id="@+id/date_format_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/on_surface_on_surface_lv_1"
            android:text="@string/date_format_1"
            android:layout_marginTop="14dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="14dp"
            app:layout_constraintTop_toBottomOf="@+id/date_format_choice"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/date_format_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/on_surface_on_surface_lv_1"
            android:text="@string/date_format_2"
            android:layout_marginTop="14dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="14dp"
            app:layout_constraintTop_toBottomOf="@+id/date_format_1"
            app:layout_constraintStart_toStartOf="parent"
            />

        <RadioGroup
            android:id="@+id/radio_group_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="16dp">

            <RadioButton
                android:id="@+id/radio_button_date_format_1"
                android:layout_width="30dp"
                android:layout_height="24dp"
                android:checked="true"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="45dp"
                android:layout_marginBottom="10dp"
                android:buttonTint="@color/color_primary_default"
                />

            <RadioButton
                android:id="@+id/radio_button_date_format_2"
                android:layout_width="30dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="12dp"
                android:buttonTint="@color/color_primary_default"
                />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/line_3"
        android:background="@color/on_surface_on_surface_lv_4"
        app:layout_constraintTop_toBottomOf="@id/inner_layout_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="32dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/line_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/on_surface_on_surface_lv_1"
            android:textStyle="bold"
            android:text="@string/about_text"
            />
        <TextView
            android:id="@+id/academy_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/on_surface_on_surface_lv_1"
            android:textStyle="bold"
            android:text="@string/academy_name_text"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:id="@+id/class_year_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/on_surface_on_surface_lv_1"
            android:text="@string/academy_year_text"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/line_4"
            android:background="@color/on_surface_on_surface_lv_4"
            android:layout_marginTop="18dp">
        </View>

        <TextView
            android:id="@+id/app_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/on_surface_on_surface_lv_2"
            android:text="@string/app_name_text"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/on_surface_on_surface_lv_1"
            android:text="@string/app_name_settings"
            />

        <TextView
            android:id="@+id/api_credit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/on_surface_on_surface_lv_2"
            android:text="@string/api_credit_text"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:id="@+id/api_credit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/on_surface_on_surface_lv_1"
            android:text="@string/api_credit"
            />

        <TextView
            android:id="@+id/developer_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/on_surface_on_surface_lv_2"
            android:text="@string/developer_text"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:id="@+id/developer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/on_surface_on_surface_lv_1"
            android:text="@string/developer_name"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:id="@+id/line_5"
            android:background="@color/on_surface_on_surface_lv_4"
            android:layout_marginTop="18dp">
        </View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/sofascore_lockup_blue"
                android:layout_width="132dp"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:src="@mipmap/sofascore_lockup_blue"
                tools:ignore="ContentDescription,RtlSymmetry"

                android:layout_marginBottom="-10dp"/>
        </RelativeLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>